# cdg-ime

./: .gitignore  .gitmodules  01_Ambientação.ipynb  02_Prospecção.ipynb  03_PreProcessamento.ipynb  04_Mineração.ipynb  Mineração.ipynb  PreProcessamento.ipynb  Prospecção.ipynb  Prospecção.slides.html  Readme.md  main.py  pyproject.toml  requirements.txt  temp.qgs
