[project]
name = "cdg-ime"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "contextily>=1.7.0",
    "gdal",
    "gdown>=6.0.0",
    "geopandas>=1.1.3",
    "ipykernel>=7.2.0",
    "lxml>=6.1.1",
    "matplotlib>=3.10.9",
    "missingno>=0.5.2",
    "nbconvert>=7.17.1",
    "osmnx>=2.1.0",
    "pystac-client>=0.9.0",
    "rasterio>=1.5.0",
]

[tool.uv.sources]
gdal = { url = "https://github.com/cgohlke/geospatial-wheels/releases/download/v2026.2.26/gdal-3.12.2-cp314-cp314-win_amd64.whl" }
